<resources>
    <string name="app_name">MeDaily</string>
    <string name="ok">OK</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="pick_date">pick_date</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="first_name">First name…</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="have_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="next">Next</string>
    <string name="select_profile_pic">Please select you profile photo</string>
    <string name="facebook_app_id">1790966477854610</string>
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>
    <string name="select_a_photo">SELECT PHOTO</string>
    <string name="name">Name..</string>
    <string name="phone_number">Phone number: +359…</string>
    <string name="enter">Enter</string>
    <string name="menu_item_add_note">Add Note</string>
    <string name="or">OR</string>
    <string name="wellcome_msg">This is your personal organizer. You can add notes, reminders, order them in categories or capture important moments from life in just a few clicks away. Enjoy :)))</string>
    <string name="add_category">Add Category</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save">Save</string>
    <string name="category_description">Description..</string>
    <string name="category_name">Category..</string>
    <string name="add_note">Add Note</string>
    <string name="category">Category..</string>
    <string name="title">Title..</string>
    <string name="content">Content..</string>
    <string name="close">close</string>
    <string name="category_details">Category Preview</string>
    <string name="category_name_2">Name</string>
    <string name="category_description_2">Description</string>
    <string name="edit_category">Edit Category</string>
    <string name="cancel">Cancel</string>
    <string name="edit_note">Edit Note</string>
    <string name="select_new_photo">Select new photo</string>
    <string name="search_for_note">Search for note..</string>
    <string name="search_for_category">Search for category..</string>
    <string name="image_preview">Image Preview</string>
    <string name="note_empty_fields_will_note_be_changed">Note: empty fields will not be changed</string>
    <string name="hh">HH</string>
    <string name="mm">MM</string>
    <string name="import_data">Import data</string>
    <string name="export_data">Export data</string>
    <string name="progress">Progress</string>
    <string name="welcome_title">Welcome %1$s</string>
    <string name="note_categ_placehold">Category: %1$s</string>
    <string name="note_creaded_on_placeh">Created on: %1$s</string>
    <string name="note_remind_date_placeh">Reminder: %1$s</string>
    <string name="note_preview">Note Preview</string>
    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="note_category">Category</string>
    <string name="no_image">No Image</string>
    <string name="note_this_section_is_note_completely_finished">Note: this section is note completely finished</string>
    <string name="reminder">Reminder</string>
    <string name="created_on">Created on</string>
    <string name="description">Description</string>

</resources>
