<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.veronica.myjournal.activities.RegisterActivity">

    <!--<zemin.notification.NotificationView-->
        <!--android:id="@+id/notificator_register"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->

    <EditText
    style="@style/EditTxtFormsStyles"
    android:hint="@string/email"
    android:id="@+id/edit_txt_reg_email"
    android:inputType="textEmailAddress"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="100dp" />


    <EditText
        style="@style/EditTxtFormsStyles"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/edit_txt_reg_password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edit_txt_reg_email" />
    <EditText
        style="@style/EditTxtFormsStyles"
        android:hint="@string/name"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:id="@+id/edit_txt_reg_name"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edit_txt_reg_password" />

    <Button
        android:id="@+id/btn_select_photo"
        android:onClick="selectUserPhoto"
        android:layout_width="match_parent"
        android:text="@string/select_a_photo"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edit_txt_reg_name" />

    <Button
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:text="@string/register"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_below="@+id/btn_select_photo"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn_register" />

    <TextView
        android:paddingStart="3dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:id="@+id/textView"
        android:layout_alignStart="@+id/edit_txt_reg_email"
        android:layout_below="@+id/btn_register" />
    <Button
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_toRightOf="@+id/textView"
        android:id="@+id/btn_open_login_form"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/cardview_dark_background"
        android:text="@string/login"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_register" />

</RelativeLayout>
