<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorHomeBackground"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_view_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_note"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/edit_txt_note_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textSize="13sp"
        android:maxLines="1"
        android:scrollbars="vertical"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/txt_view_add_note" />

    <EditText
        android:id="@+id/edit_txt_note_content_edit"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:textSize="13sp"
        android:hint="@string/content"
        android:maxLines="1"
        android:scrollbars="vertical"
        android:layout_below="@+id/edit_txt_note_edit"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/edit_txt_note_content_edit"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="13sp"
            android:text="@string/save"
            android:id="@+id/btn_edit_note" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="13sp"
            android:layout_weight="1"
            android:id="@+id/btn_cancel_edit_note" />
    </LinearLayout>

</RelativeLayout>