<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.veronica.myjournal.activities.LoginActivity">

    <EditText
        style="@style/EditTxtFormsStyles"
        android:hint="@string/email"
        android:id="@+id/edit_txt_login_email"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp" />

    <EditText
        style="@style/EditTxtFormsStyles"
        android:hint="@string/password"
        android:id="@+id/edit_txt_login_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edit_txt_login_email" />
    <Button
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/edit_txt_login_password"
        android:id="@+id/btn_login" />

    <TextView
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:id="@+id/textView"
        android:layout_alignStart="@+id/btn_login"
        android:layout_below="@+id/btn_login" />
    <Button
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:layout_toRightOf="@+id/textView"
        android:id="@+id/btn_open_register_form"
        android:layout_width="wrap_content"
        android:textColor="@color/cardview_dark_background"
        android:text="@string/register"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_login"
        android:layout_below="@+id/btn_login" />

</RelativeLayout>
