<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorHomeBackground"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:paddingRight="50dp"
    android:layout_height="match_parent"
    android:paddingLeft="50dp">


    <TextView
        android:id="@+id/txt_view_add_note"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/edit_txt_note_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txt_view_add_note" />


    <EditText
        android:id="@+id/edit_txt_note_content_edit"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:maxLines="4"
        android:hint="@string/content"
        android:scrollbars="vertical"
        android:layout_below="@+id/edit_txt_note_edit"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/categories_spinner_edit"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:hint="@string/category"
        android:layout_below="@+id/edit_txt_note_content_edit"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:weightSum="2"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/categories_spinner_edit"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/btn_note_add_img"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Img"/>

        <Button
            android:id="@+id/btn_note_add_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Remin" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="20dp" />

</RelativeLayout>