<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </DatePicker>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1.29"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <EditText
            android:id="@+id/edit_txt_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789"
            android:hint="@string/hh"
            android:gravity="center"
            android:ems="10"
            android:maxLength="2"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:id="@+id/edit_txt_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789"
            android:hint="@string/mm"
            android:maxLength="2"
            android:gravity="center"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="46dp">

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/btn_date_picker" />

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_date_picker_cancel" />
    </LinearLayout>

</LinearLayout>